{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 203,
  "lineage": "d2303754-cd8e-fe7e-4f3c-11ea838aaa7c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:888429341377:internet-gateway/igw-0b6aaf0362dd948cf",
            "id": "igw-0b6aaf0362dd948cf",
            "owner_id": "888429341377",
            "tags": {
              "Name": "pgvector-igw"
            },
            "tags_all": {
              "Name": "pgvector-igw"
            },
            "vpc_id": "vpc-0f4d6d470540c3021"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:888429341377:security-group/sg-0430dcdcdd68b8c51",
            "description": "Security group for pgvector Aurora cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0430dcdcdd68b8c51",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "PostgreSQL access from VPC",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "pgvector-aurora-sg",
            "name_prefix": "",
            "owner_id": "888429341377",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pgvector-aurora-sg"
            },
            "tags_all": {
              "Name": "pgvector-aurora-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4d6d470540c3021"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:888429341377:security-group/sg-0fd7e531e97cdd892",
            "description": "Security group for Lambda function accessing pgvector",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd7e531e97cdd892",
            "ingress": [],
            "name": "sample-lambda-sg",
            "name_prefix": "",
            "owner_id": "888429341377",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "sample-lambda-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sample-lambda-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4d6d470540c3021"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aurora_allow_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Lambda to access Aurora PostgreSQL",
            "from_port": 5432,
            "id": "sgrule-2103134058",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0430dcdcdd68b8c51",
            "security_group_rule_id": "sgr-029e7a894d233514a",
            "self": false,
            "source_security_group_id": "sg-0fd7e531e97cdd892",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aurora",
            "aws_security_group.lambda",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:888429341377:subnet/subnet-00b205b4c3feb1680",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b205b4c3feb1680",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "888429341377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pgvector-private-subnet-1"
            },
            "tags_all": {
              "Name": "pgvector-private-subnet-1"
            },
            "vpc_id": "vpc-0f4d6d470540c3021"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:888429341377:subnet/subnet-00207f44b8eb25609",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00207f44b8eb25609",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "888429341377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pgvector-private-subnet-2"
            },
            "tags_all": {
              "Name": "pgvector-private-subnet-2"
            },
            "vpc_id": "vpc-0f4d6d470540c3021"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:888429341377:vpc/vpc-0f4d6d470540c3021",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a153f90a1104c428",
            "default_route_table_id": "rtb-0f63c200a99770c38",
            "default_security_group_id": "sg-00f70325484dc0c5a",
            "dhcp_options_id": "dopt-0b46c4208565f8656",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f4d6d470540c3021",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f63c200a99770c38",
            "owner_id": "888429341377",
            "tags": {
              "Name": "pgvector-vpc"
            },
            "tags_all": {
              "Name": "pgvector-vpc"
            }
          }
        }
      ]
    }
  ]
}